--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	
 </head>
 <body>
+<script type="text/javascript" src="https://s5.cnzz.com/z_stat.php?id=1276093717&web_id=1276093717"></script>	
 <div><img src="a1.jpg"></div>
 
 <section data-role="outer" label="Powered by 135editor.com" style="font-size:16px;">
