--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 </head>
 <body>
-<script type="text/javascript" src="https://s5.cnzz.com/z_stat.php?id=1276093717&web_id=1276093717"></script>	
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1276093750'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s5.cnzz.com/z_stat.php%3Fid%3D1276093750' type='text/javascript'%3E%3C/script%3E"));</script>
 <div><img src="a1.jpg"></div>
 
 <section data-role="outer" label="Powered by 135editor.com" style="font-size:16px;">
